latest edit for submission

--- a/style.css
+++ b/style.css
@@ -1,24 +1,70 @@
-body 	{
+body	{
 	background: #777;
 	font-family: Arial;
 	font-size: 18px;
+	margin: 0;
+	padding: 1%;
+}
+
+header, footer	{
+	background: #ebebeb;
 	width: 960px;
+	height: 90px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+nav {
+	background: #ebebeb;
+	width: 960px;
+	height: 90px;
+	text-align: left;
+	margin: 0 auto;
+}
+
+footer	{
+	clear: both;
+	margin-top: 20px;
 	
 }
 
-header 	{
+.container	{
+	clear: both;
+	margin: 30px auto;
+	width: 960px;
+	margin: 20px auto;
+	height: 350px;
+}		
+	
+section, aside	{
+	 	
 	background: #ebebeb;
-	width: 495px;
 }
 
-article { 
+section	{
+	width: 440px;
+	float: left;
+}
+	
+aside	{
+	width: 440px;
+	float: right;
+
+}				
+
+article	{ 
 	color: #ebebeb;
 	background: #777;
-	width: 495px; 	
-}
+	width: 495px;
+}	
 
-h1		{ 
+h1	{ 
 	color: #777;
 	background: #ebebeb;
-	width: 495px; 
+	width: 440px;
+}
+
+p 	{
+	float: right;
+	padding:3%;
 }
