--- a/style.css
+++ b/style.css
@@ -33,22 +33,26 @@ footer	{
 	margin: 30px auto;
 	width: 960px;
 	margin: 20px auto;
-	height: 350px;
+	height: 340px;
 }		
 	
 section, aside	{
 	 	
 	background: #ebebeb;
+
 }
 
 section	{
 	width: 440px;
+	height: 320px;
 	float: left;
 }
 	
 aside	{
 	width: 440px;
+	height: 320px;
 	float: right;
+	text-align: center
 
 }				
 
@@ -56,15 +60,32 @@ article	{
 	color: #ebebeb;
 	background: #777;
 	width: 495px;
+	text-align: center
 }	
 
 h1	{ 
 	color: #777;
 	background: #ebebeb;
 	width: 440px;
+	text-align: center
 }
 
-p 	{
-	float: right;
-	padding:3%;
+h2	{ 
+	color: #777;
+	background: #ebebeb;
+	width: 440px;
+	text-align: center
+
+}
+
+h3	{ 
+	color: #777;
+	background: #ebebeb;
+	width: 440px;
+	text-align: center
+
+}
+
+p {
+	text-align: center
 }
